--- a/_code/Ch7_OD-Overview.Rmd
+++ b/_code/Ch7_OD-Overview.Rmd
@@ -1,182 +1,149 @@
 ---
-title: "Overview"
+title: "Checking_1981_flows"
 author: "Boyana Buyuklieva"
-date: "December 15, 2020"
+date: "December 21, 2020"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(readr)
+library(foreign)
+library(readr)
+library(plyr)
 library(dplyr)
-
-interStabDen_movements <- function(stabden_df){
-results <- list()
-  
-now <- Sys.time()
-overview <- stabden_df%>%
-  group_by(O, D) %>%
-  summarise( w_PSD = ifelse( (O_Den == D_Den) && (O_Stab == D_Stab), sum(Frequency, na.rm = T), NA),
-             d_Den = ifelse( (O_Den != D_Den) && (O_Stab == D_Stab), sum(Frequency, na.rm = T), NA),
-             d_Stab = ifelse( (O_Den == D_Den) && (O_Stab != D_Stab), sum(Frequency, na.rm = T), NA),
-             d_PSD = ifelse( (O_Den != D_Den) && (O_Stab != D_Stab), sum(Frequency, na.rm = T), NA),
-             Frequency = Frequency) 
-time <- difftime(Sys.time(), now)
-
-tmp <- colSums(overview [,c('w_PSD','d_Den','d_Stab','d_PSD','Frequency')], na.rm = T)
-
-precent <- tmp/tmp['Frequency']
-
-results[['counts']] <- tmp
-results[['precent']] <- precent
-}
+library(stringr)
 ```
 
 
+```{r, cache=T}
+flow81 <- read.csv("./_data/GB_Wards_1991--N10933.csv", header=T)
+LUT81 <- read.dbf("./_data/F1981.dbf")
 
+x_codes_1 <- read_csv("./_data/Wards__April_1991__Names_and_Codes_in_the_United_Kingdom.csv")
+x_codes_1 <- x_codes_1[,c("WD91CD","WD91CDC","WD91CDO")]
+names(x_codes_1 ) <- c("WD91CD","_WD91CDC","_WD91CDO")
 
+x_codes_2 <- read_csv("./_data/LUT_Ward_1981_to_Ward_1991__April_1991__Lookup_in_England_and_Wales.csv")
 
-```{r,cache=T}
-load("./_derived-data/flows_stabden11.RData")
-load("./_derived-data/flows_stabden91.RData")
+x_codes_3 <- read_csv("./_data/BHS_LUT.csv")
 ```
-
-Class, is defined based on in-migration - moves into the destination node. 
-What percent of moves came from a place 
-
-
-
-Denominator = LAD-PSD, N = number of LAD-PSDs
-w_LAD) What percent are within the smallest area? (PSD_O = PSD_D, )
-
-A) What percent move from one to a different stability class? (O_Stab != D_Stab)
-  A1) Different stab, same LAD
-  A2) Different stab, different LAD
-  
-B) What percent move from one to a different density class? (O_Den != D_Den)
-  B1) Different stab, same LAD
-  B2) Different stab, different LAD
-  
-w_PSD) What percent move to the same stability-density class somewhere else?
-
-
-
-C1) Of these what percent are within the same stabden class in the same region?
-C2) Of these what percent are within the same stabden class in different region?
-
-
-```{r}
-interStabDen_movements <- function(stabden_df){
-
-now <- Sys.time()
-overview91 <- stabden91 %>%
-  group_by(O, D) %>%
-  summarise( w_PSD = ifelse( (O_Den == D_Den) && (O_Stab == D_Stab), sum(Frequency, na.rm = T), NA),
-             A = ifelse( (O_Den != D_Den) && (O_Stab == D_Stab), sum(Frequency, na.rm = T), NA),
-             B = ifelse( (O_Den == D_Den) && (O_Stab != D_Stab), sum(Frequency, na.rm = T), NA),
-             C = ifelse( (O_Den != D_Den) && (O_Stab != D_Stab), sum(Frequency, na.rm = T), NA),
-             Frequency = Frequency) 
-difftime(Sys.time(), now)
-
-tmp91 <- colSums(overview91 [,c('w_PSD','A','B','C','Frequency')], na.rm = T)
-}
-```
-
-
-
-
-
-
-
 
 
 
 ```{r}
-dt <- head(stabden11, 30)
-#write.csv(dt,'./dt.csv')
-
-bigger <- ifelse(length(levels(stabden11$O))> length(levels(stabden11$D)),
-                 'O',
-                 'D' )
-smaller <- ifelse(bigger == 'O', 'D', 'O')
-
-dt[,smaller] <- factor(dt[,smaller], levels=levels(dt[,bigger]))
+flow<- flow81
+#three col, OD list
+names(flow) <- c("Origins","X2","Destinations","X4","counts")
+simple_flow <-as.matrix(flow[,c("X2","X4","counts")])
 
 
+LUT <- LUT81
+levels(LUT$rdl_PSD)[levels(LUT$rdl_PSD)=="5_V.High-Fix*2_Low"] <- "3_Average-Fix*2_Low"#City of London fluke
+levels(LUT$rdl_PSD)[levels(LUT$rdl_PSD)=="5_V.High-Fix*3_Average"] <- "3_Average-Fix*3_Average"#City of London fluke
+LUT <- droplevels(LUT)
+LUT$LUT <- paste(LUT$rdl_PSD, "*", LUT$lad11nm, "*", LUT$rgn11nm)
+LUT$LUT <- gsub(" ", "", LUT$LUT, fixed = TRUE)
+
+LUT <- LUT[,c("name","label",'rdl_PSD','lad11nm','rgn11nm','LUT_WD91CD','LUT__WD91C','LUT')]
+LUT <- merge( LUT, x_codes_2,
+              by.x = 'label', by.y = 'WD81CD')
+LUT <- merge( LUT, x_codes_1,
+              by = "WD91CD")
+
+LUT <- merge( LUT, x_codes_3,
+              by =  "WD91CD",
+              by.y = "BSH_LUT_CD1")
 
 
-table_edges <- dt %>%
-  group_by(O, D, O_LAD, D_LAD) %>%
-  summarise( w_LADPSD = ifelse( O == D, sum(Frequency, na.rm = T), NA ),
-             w_PSD = ifelse( (O_Den == D_Den) && (O_Stab == D_Stab), sum(Frequency, na.rm = T), NA),
-             A = ifelse( O_Stab == D_Stab, sum(Frequency, na.rm = T), NA),
-             B = ifelse( O_Den == D_Den, sum(Frequency, na.rm = T), NA),
-             Frequency = Frequency)
+LUT$zone_id <- LUT$BSH_LUT_CD2
+
+
+simple_flow_debug <- simple_flow
+
+#save( simple_flow, LUT, file = 'Problem_setup_1981.RData' )
 
 
 
-```
+#Replace the zones with the StabDen class
+#https://stackoverflow.com/questions/7547597/dictionary-style-replace-multiple-items
+map = setNames(LUT$LUT,LUT$zone_id)
 
-```{r}
-dt <- head(stabden11, 30)
+#------------DEBUG
+length(intersect( simple_flow[,1], names(map) )) #809 in common from 
+View(setdiff( simple_flow[,1], names(map) ))
+
+
+
+simple_flow[,1]<- map[simple_flow[,1]]
+simple_flow[,2]<- map[simple_flow[,2]]
+
+simple_flow_mat <- simple_flow
+
+
+
+simple_flow <- data.frame()
+simple_flow <- as.data.frame(simple_flow_mat[,c(1,2)] ) 
+simple_flow$Count <- as.data.frame(as.numeric(simple_flow_mat[,3]))
+simple_flow$Count <- simple_flow$Count$`as.numeric(simple_flow_mat[, 3])`
+
+simple_flow$Count <- as.numeric(simple_flow$Count)
+names(simple_flow ) <- c("O","D","Count")
+
+
+
+
+#Drop all O & D that are not in EW
+simple_flow <- simple_flow[which(!is.na(simple_flow$O)),]
+simple_flow <- simple_flow[which(!is.na(simple_flow$D)),]
+
+
 
 
 #sum the table ******************
 now <- Sys.time()
-overview91 <- stabden91 %>%
-    group_by(O, D) %>%
-  summarise( w_PSD = ifelse( (O_Den == D_Den) && (O_Stab == D_Stab), sum(Frequency, na.rm = T), NA),
-             A = ifelse( (O_Den != D_Den) && (O_Stab == D_Stab), sum(Frequency, na.rm = T), NA),
-             B = ifelse( (O_Den == D_Den) && (O_Stab != D_Stab), sum(Frequency, na.rm = T), NA),
-             C = ifelse( (O_Den != D_Den) && (O_Stab != D_Stab), sum(Frequency, na.rm = T), NA),
-             Frequency = Frequency)
+
+  stabden<- simple_flow %>% 
+  group_by(O,D) %>% 
+  summarise(Frequency = sum(Count,na.rm = T))
+
 difftime(Sys.time(), now)
+stabden <- as.data.frame(stabden)
+#Sanity check
+sum(simple_flow$Count, na.rm = T)
+sum(stabden$Frequency, na.rm = T)
 
-tmp91 <- colSums(overview91 [,c('w_PSD','A','B','Frequency')], na.rm = T)
 
-#w_PSD, A, B = Frequency
+
+#Clean up the data frame 
+a <- as.data.frame(str_split_fixed(as.character(stabden$O), pattern = "\\*", n = Inf))
+names(a) <- c('O_Stab', 'O_Den', 'O_LAD','O_RG')
+stabden <- cbind(stabden,a)
+
+a <- as.data.frame(str_split_fixed(as.character(stabden$D), pattern = "\\*", n = Inf))
+names(a) <- c('D_Stab', 'D_Den', 'D_LAD','D_RG')
+stabden <- cbind(stabden,a)
+rm(a)
+
+
+#assign by year
+stabden81<-stabden
+rm(stabden)
+
+sum(simple_flow$Count, na.rm = T)
+sum(stabden81$Frequency, na.rm = T)
+save(stabden81, file = "./_derived-data/new_flows_stabden81.RData")
 ```
 
 
+LUT$zone_id <- LUT$WD91CD
+length(intersect( simple_flow_debug[,1], names(map) )) #809
+head(setdiff( simple_flow_debug[,1], LUT$zone_id))
 
 
 
+LUT$zone_id <- LUT$LUT_WD91CD
+length(intersect( simple_flow_debug[,1], names(map) )) #681
 
 
-
-
-
-
-
-
-
-
-
-
-```{r}
-table_edges <-   dt %>%
-  group_by(D_LAD) %>%
-  mutate( IM_LAD = sum(Frequency, na.rm = T) )%>%
-  ungroup() %>% #like a reseset
-  group_by(O_LAD) %>%
-  mutate( OM_LAD = sum(Frequency, na.rm = T) )
-
-
-table_nodes <- table_edges[]
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+setdiff( simple_flow_debug[,1], LUT$zone_id) # in the first, but not the second
